# FogML

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
demos/TFT_ML/: TFT_ML.ino  bayes_model.c  bayes_model.h  neural_nets.c  tree.c
docs/: api.rst  conf.py  examples.rst  generators.rst  index.rst  pipelines.rst  sdk.rst  usage.rst
examples/TFT_ML/: TFT_ML.ino  neural_nets.h  tree.h
examples/anomaly/: 0_idle.csv  1_circle.csv  2_snake.csv  3_up_down.csv  isolation_forest_anomaly.py  isolation_forest_test.c  isolation_forest_test.h  kmeans_anomaly.py  program.c
examples/rl/: cart_pole.py  cart_pole_iot.py  mountain_car.py  mountain_car_iot.py
examples/rl/FogML_RL_Arduino/: FogML_RL_Arduino.ino  fogml_rl.h  qlearning_model_test.c  qstates_discretizer_test.c
examples/simple/: iris.py  knn_model.c  mnist.py  moa_dataset.py  tree.dot
examples/simple/mldata/: dataset.arff
examples/simple/models/: bayes_model.c  iris_bayes_model.c  iris_network_model.c  iris_tree_model.c  mnist_network_model.c  mnist_tree_model.c  network_model.c
generators/: arduino_generator.py  base_generator.py  bayes_code_generator.py  generator.py  mlp_code_generator.py  tree_code_generator.py  utils.py
generators/examples/: iris.py  mnist.py  moa_dataset.py
generators/examples/models/: mnist_bayes_model.c  mnist_tree_model_int.c
generators/skeletons/: bayes_skeleton.txt
src/fogml/anomaly/: __init__.py  classes.py  detectors.py  isolation_forest_detector.py  program.c
src/fogml/generators/: __init__.py  anomaly_detector_generator.py  arduino_generator.py  base_generator.py  (+12 more)
(+10 files in other folders)
