[metadata]
name = fogml
version = 0.0.8
author = Tomasz Szydlo
author_email = tszydlo@agh.edu.pl
description = Tiny Federated ML for Fog Computing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tszydlo/FogML
project_urls =
    Bug Tracker = https://github.com/tszydlo/FogML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache 2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.package_data]
* = *.txt, *.c

[options.packages.find]
where = src
